change from \00 to \u00 in da, no, sv properties
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@85 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/src/com/jidesoft/dialog/buttons_da.properties
+++ b/src/com/jidesoft/dialog/buttons_da.properties
@@ -17,10 +17,10 @@ Button.clear.mnemonic=R
 Button.close=Luk
 Button.close.mnemonic=L
 
-Button.continue=Forts\00E6t
+Button.continue=Forts\u00E6t
 Button.continue.mnemonic=F
 
-Button.edit=Redigér
+Button.edit=Redig\u00e9r
 Button.edit.mnemonic=R
 
 Button.exit=Afslut
@@ -29,7 +29,7 @@ Button.exit.mnemonic=A
 Button.find=Find
 Button.find.mnemonic=F
 
-Button.findNext=Find n\00E6ste
+Button.findNext=Find n\u00E6ste
 Button.findNext.mnemonic=N
 
 Button.finish=Slut
@@ -41,16 +41,16 @@ Button.forward.mnemonic=F
 Button.goback=Tilbage
 Button.goback.mnemonic=B
 
-Button.help=Hj\00E6lp
+Button.help=Hj\u00E6lp
 Button.help.mnemonic=H
 
 Button.new=Ny
 Button.new.mnemonic=N
 
-Button.next=N\00E6ste >
+Button.next=N\u00E6ste >
 Button.next.mnemonic=N
 
-Button.open=\00C5bn
+Button.open=\u00C5bn
 Button.open.mnemonic=B
 
 Button.print=Udskriv
@@ -59,10 +59,10 @@ Button.print.mnemonic=U
 Button.replace=Erstat
 Button.replace.mnemonic=E
 
-Button.retry=Fors\00F8g igen
+Button.retry=Fors\u00F8g igen
 Button.retry.mnemonic=I
 
-Button.run=K\00F8r
+Button.run=K\u00F8r
 Button.run.mnemonic=K
 
 Button.save=Gem
