--- a/src/com/jidesoft/plaf/basic/basic_da.properties
+++ b/src/com/jidesoft/plaf/basic/basic_da.properties
@@ -22,13 +22,13 @@ DockableFrameTitlePane.autohideMnemonic=A
 ## for both autohide button and stop autohide button since it is a toggle button
 DockableFrameTitlePane.autohideTooltip=Autoskjul(til/fra)
 
-DockableFrameTitlePane.maximizeText=Maksimér
+DockableFrameTitlePane.maximizeText=Maksim\u00e9r
 DockableFrameTitlePane.maximizeMnemonic=M
 
 DockableFrameTitlePane.restoreText=Gendan
 DockableFrameTitlePane.restoreMnemonic=G
 ## for both maximize button and restore button since it is a toggle button
-DockableFrameTitlePane.maximizeTooltip=Maksimér/Gendan
+DockableFrameTitlePane.maximizeTooltip=Maksim\u00e9r/Gendan
 
 #
 # Dockableframe attributes
@@ -48,7 +48,7 @@ DockableFrameTitlePane.autohidableMnemonic=U
 #
 # Strings for Undo
 #
-Undo.dragging=Tr\00E6k
+Undo.dragging=Tr\u00E6k
 Undo.hide=Skjul
 Undo.toggle=Skift Flydende/Docking
 Undo.toggleAutohide=Skift Autoskjul/Docking
