--- a/src/com/jidesoft/swing/swing_da.properties
+++ b/src/com/jidesoft/swing/swing_da.properties
@@ -1,7 +1,7 @@
 # 
 # Strings for Searchable classes
 #
-Searchable.searchFor=S\u00F8g:
+Searchable.searchFor=S\u00f8g:
 Searchable.noMatch=(ikke fundet)
 
 #
@@ -9,22 +9,22 @@ Searchable.noMatch=(ikke fundet)
 #
 SearchableBar.find=Find:
 SearchableBar.find.mnemonic=F
-SearchableBar.findNext=Find N\00E6ste
+SearchableBar.findNext=Find N\u00E6ste
 SearchableBar.findNext.mnemonic=N
-SearchableBar.findNext.tooltip=Find den n\00E6ste forekomst af s\00F8geteksten
-SearchableBar.findPrevious=Find Foreg\00E5ende
+SearchableBar.findNext.tooltip=Find den n\u00E6ste forekomst af s\u00F8geteksten
+SearchableBar.findPrevious=Find Foreg\u00E5ende
 SearchableBar.findPrevious.mnemonic=O
-SearchableBar.findPrevious.tooltip=Find den foreg\00E5ende forekomst af s\00F8geteksten
-SearchableBar.highlights=Fremh\00E6v
+SearchableBar.findPrevious.tooltip=Find den foreg\u00E5ende forekomst af s\u00F8geteksten
+SearchableBar.highlights=Fremh\u00E6v
 SearchableBar.highlights.mnemonic=H
-SearchableBar.highlights.tooltip=Fremh\00E6v alle forekomster af s\00F8geteksten
-SearchableBar.matchCase=Forskel p\00E5 store/sm\00E5 bogstaver
+SearchableBar.highlights.tooltip=Fremh\u00E6v alle forekomster af s\u00F8geteksten
+SearchableBar.matchCase=Forskel p\u00E5 store/sm\u00E5 bogstaver
 SearchableBar.matchCase.mnemonic=S
-SearchableBar.repeats=Forts\00E6tter
+SearchableBar.repeats=Forts\u00E6tter
 SearchableBar.repeats.mnemonic=T
 
-SearchableBar.reachedBottom=Bunden af siden er n\00E5et
-SearchableBar.reachedTop=Toppen er siden er n\00E5et
-SearchableBar.reachedBottomRepeat=Bunden af siden er n\00E5et, forts\00E6tter fra toppen
-SearchableBar.reachedTopRepeat=Toppen af siden er n\00E5et, forts\00E6tter fra bunden
-SearchableBar.notFound=S\00F8getekst ikke fundet
+SearchableBar.reachedBottom=Bunden af siden er n\u00E5et
+SearchableBar.reachedTop=Toppen er siden er n\u00E5et
+SearchableBar.reachedBottomRepeat=Bunden af siden er n\u00E5et, forts\u00E6tter fra toppen
+SearchableBar.reachedTopRepeat=Toppen af siden er n\u00E5et, forts\u00E6tter fra bunden
+SearchableBar.notFound=S\u00F8getekst ikke fundet
