--- a/src/com/jidesoft/swing/swing_no.properties
+++ b/src/com/jidesoft/swing/swing_no.properties
@@ -18,13 +18,13 @@ SearchableBar.findPrevious.tooltip=Finn forrige forekomst av uttrykket
 SearchableBar.highlights=Uthev
 SearchableBar.highlights.mnemonic=U
 SearchableBar.highlights.tooltip=Uthev alle forekomster av uttrykket
-SearchableBar.matchCase=Forskjell p\00E5 store/sm\00E5 bokstaver
+SearchableBar.matchCase=Forskjell p\u00E5 store/sm\u00E5 bokstaver
 SearchableBar.matchCase.mnemonic=B
 SearchableBar.repeats=Gjentakelser
 SearchableBar.repeats.mnemonic=G
 
-SearchableBar.reachedBottom=Bunnen av siden er n\00E5dd
-SearchableBar.reachedTop=Toppen av siden er n\00E5dd
-SearchableBar.reachedBottomRepeat=Bunnen av siden er n\00E5dd, fortsett fra toppen
-SearchableBar.reachedTopRepeat=Toppen av siden er n\00E5dd, fortsett fra bunnen
+SearchableBar.reachedBottom=Bunnen av siden er n\u00E5dd
+SearchableBar.reachedTop=Toppen av siden er n\u00E5dd
+SearchableBar.reachedBottomRepeat=Bunnen av siden er n\u00E5dd, fortsett fra toppen
+SearchableBar.reachedTopRepeat=Toppen av siden er n\u00E5dd, fortsett fra bunnen
 SearchableBar.notFound=Uttrykket ble ikke funnet
