--- a/src/com/jidesoft/dialog/buttons_no.properties
+++ b/src/com/jidesoft/dialog/buttons_no.properties
@@ -50,7 +50,7 @@ Button.new.mnemonic=N
 Button.next=Neste >
 Button.next.mnemonic=N
 
-Button.open=\00C5pne
+Button.open=\u00C5pne
 Button.open.mnemonic=P
 
 Button.print=Skriv
@@ -59,10 +59,10 @@ Button.print.mnemonic=S
 Button.replace=Erstatt
 Button.replace.mnemonic=E
 
-Button.retry=Fors\00F8k igjen
+Button.retry=Fors\u00F8k igjen
 Button.retry.mnemonic=I
 
-Button.run=Kj\00F8r
+Button.run=Kj\u00F8r
 Button.run.mnemonic=K
 
 Button.save=Lagre
