--- a/src/com/jidesoft/dialog/buttons_sv.properties
+++ b/src/com/jidesoft/dialog/buttons_sv.properties
@@ -2,22 +2,22 @@
 #Buttons
 #
 
-Button.apply=Anv\00E4nd
+Button.apply=Anv\u00E4nd
 Button.apply.mnemonic=A
 
 Button.back=< Tillbaka
 Button.back.mnemonic=T
 
-Button.browse=Bl\00E4ddra
+Button.browse=Bl\u00E4ddra
 Button.browse.mnemonic=B
 
 Button.clear=Rensa
 Button.clear.mnemonic=R
 
-Button.close=St\00E4ng
+Button.close=St\u00E4ng
 Button.close.mnemonic=S
 
-Button.continue=Forts\00E4tt
+Button.continue=Forts\u00E4tt
 Button.continue.mnemonic=F
 
 Button.edit=Redigera
@@ -26,43 +26,43 @@ Button.edit.mnemonic=R
 Button.exit=Avsluta
 Button.exit.mnemonic=A
 
-Button.find=S\00F6k
+Button.find=S\u00F6k
 Button.find.mnemonic=S
 
-Button.findNext=S\00F6k n\00E4sta
+Button.findNext=S\u00F6k n\u00E4sta
 Button.findNext.mnemonic=N
 
-Button.finish=Slutf\00F6r
+Button.finish=Slutf\u00F6r
 Button.finish.mnemonic=S
 
-Button.forward=Fram\00E5t
+Button.forward=Fram\u00E5t
 Button.forward.mnemonic=F
 
-Button.goback=Go Bak\00E5t
+Button.goback=Go Bak\u00E5t
 Button.goback.mnemonic=B
 
-Button.help=Hj\00E4lp
+Button.help=Hj\u00E4lp
 Button.help.mnemonic=H
 
 Button.new=Ny
 Button.new.mnemonic=N
 
-Button.next=N\00E4sta >
+Button.next=N\u00E4sta >
 Button.next.mnemonic=N
 
-Button.open=\00D6ppna
-Button.open.mnemonic=\00D6
+Button.open=\u00D6ppna
+Button.open.mnemonic=\u00D6
 
 Button.print=Skriv ut
 Button.print.mnemonic=U
 
-Button.replace=Ers\00E4tt
+Button.replace=Ers\u00E4tt
 Button.replace.mnemonic=E
 
-Button.retry=F\00F6rs\00F6k igen
+Button.retry=F\u00F6rs\u00F6k igen
 Button.retry.mnemonic=F
 
-Button.run=K\00F6r
+Button.run=K\u00F6r
 Button.run.mnemonic=K
 
 Button.save=Spara
