--- a/src/com/jidesoft/grouper/group_no.properties
+++ b/src/com/jidesoft/grouper/group_no.properties
@@ -1,12 +1,12 @@
 #
 # Date related Grouper names
 #
-Date.dayOfYear=Dag i \00E5ret
-Date.dayOfMonth=Dag i m\00E5neden
+Date.dayOfYear=Dag i \u00E5ret
+Date.dayOfMonth=Dag i m\u00E5neden
 Date.dayOfWeek=Dag i uken
-Date.dayOfWeekInMonth=Dag i uken i m\00E5neden
-Date.weekOfMonth=Uge i m\00E5neden
-Date.weekOfYear=Uke i \00E5ret
-Date.year=\00C5r
-Date.month=M\00E5ned
+Date.dayOfWeekInMonth=Dag i uken i m\u00E5neden
+Date.weekOfMonth=Uge i m\u00E5neden
+Date.weekOfYear=Uke i \u00E5ret
+Date.year=\u00C5r
+Date.month=M\u00E5ned
 Date.quarter=Kvartal
