update _de properties
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@372 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/src/com/jidesoft/converter/converter_de.properties
+++ b/src/com/jidesoft/converter/converter_de.properties
@@ -3,3 +3,17 @@
 #
 Boolean.true=Ja
 Boolean.false=Nein
+
+#
+#Strings for FontConverter
+#
+Font.plain=Normal
+Font.bold=Fett
+Font.italic=kursiv
+Font.boldItalic=Fett kursiv
+
+#
+#Strings for QuarterConverter
+#
+Quarter.quarter=Viertel {0}
+#Plesae note, there is a space at the end of Qtr.
