--- a/src/com/jidesoft/dialog/buttons_de.properties
+++ b/src/com/jidesoft/dialog/buttons_de.properties
@@ -73,3 +73,10 @@ Button.saveAs.mnemonic=U
 
 Button.stop=Stop
 Button.stop.mnemonic=S
+
+Button.showDetails=Details >>
+Button.showDetails.mnemonic=D
+
+Button.hideDetails=<< Details
+Button.hideDetails.mnemonic=D
+
