--- a/src/com/jidesoft/swing/swing_de.properties
+++ b/src/com/jidesoft/swing/swing_de.properties
@@ -1,7 +1,30 @@
 #
 # Strings for Searchable classes
 #
-Searchable.searchFor=Suchen :
 Searchable.noMatch=(nicht gefunden)
+Searchable.searchFor=Suchen :
+
+#
+# Strings for SearchableBar classes
+#
 SearchableBar.find=Suchen:
 SearchableBar.find.mnemonic=S
+SearchableBar.findNext=N\u00e4chsten suchen
+SearchableBar.findNext.mnemonic=N
+SearchableBar.findNext.tooltip=Sucht nach dem n\u00e4chstem Auftreten des Ausdrucks
+SearchableBar.findPrevious=Letzten suchen
+SearchableBar.findPrevious.mnemonic=V
+SearchableBar.findPrevious.tooltip=Sucht nach dem leztem Auftreten des Ausdrucks
+SearchableBar.highlights=Hervorheben
+SearchableBar.highlights.mnemonic=H
+SearchableBar.highlights.tooltip=Alle gefundenen Ausdr\u00fccke markieren.
+SearchableBar.matchCase=Gross-/Kleinschreibung beachten
+SearchableBar.matchCase.mnemonic=G
+SearchableBar.repeats=Wiederholungen
+SearchableBar.repeats.mnemonic=W
+
+SearchableBar.reachedBottom=Ende der Seite erreicht.
+SearchableBar.reachedBottomRepeat=Ende der Seite erreicht, vom Anfang an weitergesucht
+SearchableBar.reachedTop=Anfang der Seite erreicht
+SearchableBar.reachedTopRepeat=Anfang der Seite erreicht, vom Ende aus weitergesucht
+SearchableBar.notFound=Ausdruck nicht gefunden
