--- a/src/com/jidesoft/plaf/basic/basic_de.properties
+++ b/src/com/jidesoft/plaf/basic/basic_de.properties
@@ -1,31 +1,69 @@
+#
+# Strings for DockableFrame TitlePane
+#
+
+#
+# Button actions
+#
 DockableFrameTitlePane.closeText=Schlie\u00dfen
 DockableFrameTitlePane.closeMnemonic=S
 DockableFrameTitlePane.closeTooltip=Schlie\u00dfen
+
 DockableFrameTitlePane.hideAutohideText=Ausblenden
 DockableFrameTitlePane.hideAutohideMnemonic=A
 DockableFrameTitlePane.hideAutohideTooltip=Aktives automatisch ausblendbares Fenster ausblenden
+
 DockableFrameTitlePane.floatingText=Unverankert
 DockableFrameTitlePane.floatingMnemonic=U
 DockableFrameTitlePane.floatingTooltip=Unverankert ein/aus
+
 DockableFrameTitlePane.autohideText=Automatisch ausblenden
 DockableFrameTitlePane.autohideMnemonic=B
+## for both autohide button and stop autohide button since it is a toggle button
 DockableFrameTitlePane.autohideTooltip=Automatisch ausblenden ein/aus
+
 DockableFrameTitlePane.maximizeText=Maximieren
 DockableFrameTitlePane.maximizeMnemonic=M
-DockableFrameTitlePane.maximizeTooltip=Maximieren/Wiederherstellen
+
 DockableFrameTitlePane.restoreText=Wiederherstellen
 DockableFrameTitlePane.restoreMnemonic=W
+## for both maximize button and restore button since it is a toggle button
+DockableFrameTitlePane.maximizeTooltip=Maximieren/Wiederherstellen
+
+#
+# Dockableframe attributes
+#
 DockableFrameTitlePane.dockableText=Andockbar
 DockableFrameTitlePane.dockableMnemonic=N
+DockableFrameTitlePane.dockableTooltip=Andockbar umschalten
+
 DockableFrameTitlePane.hidableText=Ausblendbar
 DockableFrameTitlePane.hidableMnemonic=L
+
 DockableFrameTitlePane.floatableText=Verschiebbar
 DockableFrameTitlePane.floatableMnemonic=H
+
 DockableFrameTitlePane.autohidableText=Automatisch ausblendbar
 DockableFrameTitlePane.autohidableMnemonic=T
+
+#
+# Strings for Undo
+#
 Undo.dragging=Ziehen
 Undo.hide=Ausblenden
 Undo.toggle=Schwebe-/Andockmodus ein/aus
 Undo.toggleAutohide=Autom. Ausblend-/Andockmodus ein/aus
+
+#
+# Strings for CollapsiblePane
+#
 CollapsiblePane.collapseText=Erweitern/Zusammenfassen
 CollapsiblePane.collapseToolTip=Inhalt erweitern oder zusammenfassen
+
+#
+# Strings for JideTabbedPane
+#
+JideTabbedPane.scrollBackward=Zur\u00fcck scrollen
+JideTabbedPane.scrollForward=Vor scrollen
+JideTabbedPane.showList=Liste anzeigen
+JideTabbedPane.close=Schliessen
