add extra properties files 10 primary ones plus + 38 additional ones
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@474 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/src/com/jidesoft/dialog/buttons_de.properties
+++ b/src/com/jidesoft/dialog/buttons_de.properties
@@ -2,44 +2,44 @@
 #Buttons
 #
 
-Button.apply=Übernehmen
-Button.apply.mnemonic=B
+Button.apply=Anwenden
+Button.apply.mnemonic=A
 
-Button.back=< Zurück
-Button.back.mnemonic=Z
+Button.back=< Zur\u00fcck
+Button.back.mnemonic=R
 
 Button.browse=Durchsuchen
 Button.browse.mnemonic=D
 
-Button.clear=Löschen
+Button.clear=L\u00f6schen
 Button.clear.mnemonic=L
 
-Button.close=Schliessen
-Button.close.mnemonic=S
+Button.close=Schlie\u00dfen
+Button.close.mnemonic=C
 
-Button.continue=Weiter
-Button.continue.mnemonic=W
+Button.continue=Fortfahren
+Button.continue.mnemonic=F
 
-Button.edit=Ändern
-Button.edit.mnemonic=Ä
+Button.edit=Bearbeiten
+Button.edit.mnemonic=E
 
-Button.exit=Ende
-Button.exit.mnemonic=E
+Button.exit=Verlassen
+Button.exit.mnemonic=V
 
 Button.find=Suchen
-Button.find.mnemonic=U
+Button.find.mnemonic=S
 
-Button.findNext=Nächsten Suchen
+Button.findNext=N\u00e4chste suchen
 Button.findNext.mnemonic=N
 
 Button.finish=Beenden
 Button.finish.mnemonic=B
 
-Button.forward=Weiter
-Button.forward.mnemonic=W
+Button.forward=Vorw\u00e4rts
+Button.forward.mnemonic=V
 
-Button.goback=Zurück gehen
-Button.goback.mnemonic=Z
+Button.goback=Gehe zur\u00fcck
+Button.goback.mnemonic=G
 
 Button.help=Hilfe
 Button.help.mnemonic=H
@@ -50,8 +50,8 @@ Button.new.mnemonic=N
 Button.next=Weiter >
 Button.next.mnemonic=W
 
-Button.open=Öffnen
-Button.open.mnemonic=Ö
+Button.open=\u00d6ffnen
+Button.open.mnemonic=\u00d6
 
 Button.print=Drucken
 Button.print.mnemonic=D
@@ -59,19 +59,19 @@ Button.print.mnemonic=D
 Button.replace=Ersetzen
 Button.replace.mnemonic=E
 
-Button.retry=Wiederholen
-Button.retry.mnemonic=W
+Button.retry=Neuversuch
+Button.retry.mnemonic=N
 
-Button.run=Starten
-Button.run.mnemonic=S
+Button.run=Ausf\u00fchren
+Button.run.mnemonic=A
 
 Button.save=Speichern
 Button.save.mnemonic=S
 
-Button.saveAs=Speichern unter
-Button.saveAs.mnemonic=U
+Button.saveAs=Speichern als
+Button.saveAs.mnemonic=A
 
-Button.stop=Stop
+Button.stop=Stopp
 Button.stop.mnemonic=S
 
 Button.showDetails=Details >>
@@ -79,4 +79,3 @@ Button.showDetails.mnemonic=D
 
 Button.hideDetails=<< Details
 Button.hideDetails.mnemonic=D
-
