--- a/src/com/jidesoft/dialog/buttons_fr.properties
+++ b/src/com/jidesoft/dialog/buttons_fr.properties
@@ -5,11 +5,11 @@
 Button.apply=Appliquer
 Button.apply.mnemonic=A
 
-Button.back=<Précédent
-Button.back.mnemonic=B
+Button.back=< Pr\u00e9c\u00e9dent
+Button.back.mnemonic=P
 
 Button.browse=Parcourir
-Button.browse.mnemonic=B
+Button.browse.mnemonic=P
 
 Button.clear=Effacer
 Button.clear.mnemonic=E
@@ -20,7 +20,7 @@ Button.close.mnemonic=F
 Button.continue=Continuer
 Button.continue.mnemonic=C
 
-Button.edit=Edition
+Button.edit=\u00c9dition
 Button.edit.mnemonic=E
 
 Button.exit=Quitter
@@ -35,8 +35,8 @@ Button.findNext.mnemonic=S
 Button.finish=Terminer
 Button.finish.mnemonic=T
 
-Button.forward=Avancer
-Button.forward.mnemonic=A
+Button.forward=Suivant
+Button.forward.mnemonic=S
 
 Button.goback=Retour
 Button.goback.mnemonic=R
@@ -47,7 +47,7 @@ Button.help.mnemonic=A
 Button.new=Nouveau
 Button.new.mnemonic=N
 
-Button.next=Suivant>
+Button.next=Suivant >
 Button.next.mnemonic=S
 
 Button.open=Ouvrir
@@ -59,10 +59,10 @@ Button.print.mnemonic=I
 Button.replace=Remplacer
 Button.replace.mnemonic=R
 
-Button.retry=Réessayer
+Button.retry=R\u00e9essayer
 Button.retry.mnemonic=R
 
-Button.run=Exécuter
+Button.run=Ex\u00e9cuter
 Button.run.mnemonic=X
 
 Button.save=Enregister
@@ -71,5 +71,11 @@ Button.save.mnemonic=E
 Button.saveAs=Enregister sous
 Button.saveAs.mnemonic=S
 
-Button.stop=Arrêter
+Button.stop=Arr\u00eater
 Button.stop.mnemonic=A
+
+Button.showDetails=D\u00e9tails >>
+Button.showDetails.mnemonic=D
+
+Button.hideDetails=<< Masquer les d\u00e9tails
+Button.hideDetails.mnemonic=M
