--- a/src/com/jidesoft/dialog/buttons_ja.properties
+++ b/src/com/jidesoft/dialog/buttons_ja.properties
@@ -56,7 +56,7 @@ Button.open.mnemonic=O
 Button.print=\u5370\u5237(P)
 Button.print.mnemonic=P
 
-Button.replace=\u7f6e\u63db\uff08R\uff09
+Button.replace=\u7f6e\u63db(R)
 Button.replace.mnemonic=R
 
 Button.retry=\u518d\u8a66\u884c(R)
@@ -73,3 +73,9 @@ Button.saveAs.mnemonic=A
 
 Button.stop=\u505c\u6b62(S)
 Button.stop.mnemonic=S
+
+Button.showDetails=\u8a73\u7d30(D) >>
+Button.showDetails.mnemonic=D
+
+Button.hideDetails=<< \u8a73\u7d30(D)
+Button.hideDetails.mnemonic=D
