--- a/src/com/jidesoft/dialog/buttons_sv.properties
+++ b/src/com/jidesoft/dialog/buttons_sv.properties
@@ -2,67 +2,67 @@
 #Buttons
 #
 
-Button.apply=Anv\u00E4nd
-Button.apply.mnemonic=A
+Button.apply=Verkst\u00e4ll
+Button.apply.mnemonic=V
 
-Button.back=< Tillbaka
-Button.back.mnemonic=T
+Button.back=< F\u00f6reg\u00e5ende
+Button.back.mnemonic=F
 
-Button.browse=Bl\u00E4ddra
+Button.browse=Bl\u00e4ddra
 Button.browse.mnemonic=B
 
 Button.clear=Rensa
 Button.clear.mnemonic=R
 
-Button.close=St\u00E4ng
+Button.close=St\u00e4ng
 Button.close.mnemonic=S
 
-Button.continue=Forts\u00E4tt
+Button.continue=Forts\u00e4tt
 Button.continue.mnemonic=F
 
 Button.edit=Redigera
 Button.edit.mnemonic=R
 
 Button.exit=Avsluta
-Button.exit.mnemonic=A
+Button.exit.mnemonic=V
 
-Button.find=S\u00F6k
+Button.find=S\u00f6k
 Button.find.mnemonic=S
 
-Button.findNext=S\u00F6k n\u00E4sta
+Button.findNext=S\u00f6k n\u00e4sta
 Button.findNext.mnemonic=N
 
-Button.finish=Slutf\u00F6r
+Button.finish=Slutf\u00f6r
 Button.finish.mnemonic=S
 
-Button.forward=Fram\u00E5t
+Button.forward=Fram\u00e5t
 Button.forward.mnemonic=F
 
-Button.goback=Go Bak\u00E5t
-Button.goback.mnemonic=B
+Button.goback=G\u00e5 tillbaka
+Button.goback.mnemonic=G
 
-Button.help=Hj\u00E4lp
+Button.help=Hj\u00e4lp
 Button.help.mnemonic=H
 
 Button.new=Ny
 Button.new.mnemonic=N
 
-Button.next=N\u00E4sta >
+Button.next=N\u00e4sta >
 Button.next.mnemonic=N
 
-Button.open=\u00D6ppna
-Button.open.mnemonic=\u00D6
+Button.open=\u00d6ppna
+Button.open.mnemonic=\u00d6
 
 Button.print=Skriv ut
-Button.print.mnemonic=U
+Button.print.mnemonic=S
 
-Button.replace=Ers\u00E4tt
+Button.replace=Ers\u00e4tt
 Button.replace.mnemonic=E
 
-Button.retry=F\u00F6rs\u00F6k igen
+Button.retry=F\u00f6rs\u00f6k igen
 Button.retry.mnemonic=F
 
-Button.run=K\u00F6r
+Button.run=K\u00f6r
 Button.run.mnemonic=K
 
 Button.save=Spara
@@ -71,7 +71,7 @@ Button.save.mnemonic=S
 Button.saveAs=Spara som
 Button.saveAs.mnemonic=M
 
-Button.stop=Stoppa
+Button.stop=Stopp
 Button.stop.mnemonic=S
 
 Button.showDetails=Detaljer >>
