--- a/src/com/jidesoft/dialog/buttons_zh_CN.properties
+++ b/src/com/jidesoft/dialog/buttons_zh_CN.properties
@@ -11,9 +11,7 @@ Button.back.mnemonic=B
 Button.browse=\u6d4f\u89c8(B)
 Button.browse.mnemonic=B
 
-Button.cancel=\u53d6\u6d88
-
-Button.clear=\u6e05\u9664
+Button.clear=\u6e05\u9664(C)
 Button.clear.mnemonic=C
 
 Button.close=\u5173\u95ed(C)
@@ -28,19 +26,19 @@ Button.edit.mnemonic=E
 Button.exit=\u9000\u51fa(X)
 Button.exit.mnemonic=X
 
-Button.find=\u67e5\u627e(F)
+Button.find=\u5bfb\u627e(F)
 Button.find.mnemonic=F
 
-Button.findNext=\u67e5\u627e\u4e0b\u4e00\u4e2a(N)
+Button.findNext=\u5bfb\u627e\u4e0b\u4e00\u4e2a(N)
 Button.findNext.mnemonic=N
 
-Button.finish=\u5b8c\u6210(F)
+Button.finish=\u7ed3\u675f(F)
 Button.finish.mnemonic=F
 
-Button.forward=\u524d\u8fdb(F)
+Button.forward=\u5411\u524d(F)
 Button.forward.mnemonic=F
 
-Button.goback=\u8fd4\u56de(G)
+Button.goback=\u9000\u56de(G)
 Button.goback.mnemonic=G
 
 Button.help=\u5e2e\u52a9(H)
@@ -51,11 +49,6 @@ Button.new.mnemonic=N
 
 Button.next=\u4e0b\u4e00\u6b65(N) >
 Button.next.mnemonic=N
-
-Button.no=\u5426(N)
-Button.no.mnemonic=N
-
-Button.ok=\u786e\u8ba4
 
 Button.open=\u6253\u5f00(O)
 Button.open.mnemonic=O
@@ -72,20 +65,17 @@ Button.retry.mnemonic=R
 Button.run=\u8fd0\u884c(R)
 Button.run.mnemonic=R
 
-Button.save=\u4fdd\u5b58(S)
+Button.save=\u4fdd\u5b58
 Button.save.mnemonic=S
 
-Button.saveAs=\u53e6\u5b58\u4e3a(A)
+Button.saveAs=\u4fdd\u5b58\u4e3a(A)
 Button.saveAs.mnemonic=A
 
 Button.stop=\u505c\u6b62(S)
 Button.stop.mnemonic=S
 
-Button.yes=\u662f(Y)
-Button.yes.mnemonic=Y
-
-Button.showDetails=\u7ec6\u8282(D) >>
+Button.showDetails=\u8be6\u7ec6\u60c5\u51b5(D) >>
 Button.showDetails.mnemonic=D
 
-Button.hideDetails=<< \u7ec6\u8282(D)
+Button.hideDetails=<< \u8be6\u7ec6\u60c5\u51b5(D)
 Button.hideDetails.mnemonic=D
