--- a/src/com/jidesoft/swing/swing_de.properties
+++ b/src/com/jidesoft/swing/swing_de.properties
@@ -1,30 +1,30 @@
 #
 # Strings for Searchable classes
 #
-Searchable.noMatch=(nicht gefunden)
-Searchable.searchFor=Suchen :
+Searchable.searchFor=Suche nach:
+Searchable.noMatch=(Keine \u00dcbereinstimmung)
 
 #
 # Strings for SearchableBar classes
 #
 SearchableBar.find=Suchen:
 SearchableBar.find.mnemonic=S
-SearchableBar.findNext=N\u00e4chsten suchen
+SearchableBar.findNext=N\u00e4chste suchen
 SearchableBar.findNext.mnemonic=N
-SearchableBar.findNext.tooltip=Sucht nach dem n\u00e4chstem Auftreten des Ausdrucks
-SearchableBar.findPrevious=Letzten suchen
+SearchableBar.findNext.tooltip=N\u00e4chstes Auftreten des Ausdrucks suchen
+SearchableBar.findPrevious=Vorherige suchen
 SearchableBar.findPrevious.mnemonic=V
-SearchableBar.findPrevious.tooltip=Sucht nach dem leztem Auftreten des Ausdrucks
+SearchableBar.findPrevious.tooltip=Vorheriges Auftreten des Ausdrucks suchen
 SearchableBar.highlights=Hervorheben
 SearchableBar.highlights.mnemonic=H
-SearchableBar.highlights.tooltip=Alle gefundenen Ausdr\u00fccke markieren.
-SearchableBar.matchCase=Gross-/Kleinschreibung beachten
-SearchableBar.matchCase.mnemonic=G
-SearchableBar.repeats=Wiederholungen
-SearchableBar.repeats.mnemonic=W
+SearchableBar.highlights.tooltip=Jedes Auftreten des Ausdrucks hervorheben
+SearchableBar.matchCase=Schreibung anpassen
+SearchableBar.matchCase.mnemonic=S
+SearchableBar.repeats=Wiederholung
+SearchableBar.repeats.mnemonic=w
 
-SearchableBar.reachedBottom=Ende der Seite erreicht.
-SearchableBar.reachedBottomRepeat=Ende der Seite erreicht, vom Anfang an weitergesucht
-SearchableBar.reachedTop=Anfang der Seite erreicht
-SearchableBar.reachedTopRepeat=Anfang der Seite erreicht, vom Ende aus weitergesucht
+SearchableBar.reachedBottom=Seitenende erreicht
+SearchableBar.reachedTop=Seitenanfang erreicht
+SearchableBar.reachedBottomRepeat=Seitenende erreicht, von oben fortgesetzt
+SearchableBar.reachedTopRepeat=Seitenanfang erreicht, von unten fortgesetzt 
 SearchableBar.notFound=Ausdruck nicht gefunden
