--- a/src/com/jidesoft/swing/swing_es.properties
+++ b/src/com/jidesoft/swing/swing_es.properties
@@ -1,2 +1,28 @@
+#
+# Strings for Searchable classes
+#
+Searchable.searchFor=Buscar:
+Searchable.noMatch=(no se ha encontrado)
+#
+# Strings for SearchableBar classes
+#
 SearchableBar.find=Buscar:
 SearchableBar.find.mnemonic=B
+SearchableBar.findNext=Buscar siguiente
+SearchableBar.findNext.mnemonic=N
+SearchableBar.findNext.tooltip=Buscar la siguiente aparici\u00f3n de la frase
+SearchableBar.findPrevious=Encontrar anterior
+SearchableBar.findPrevious.mnemonic=P
+SearchableBar.findPrevious.tooltip=Buscar la anterior aparici\u00f3n de la frase
+SearchableBar.highlights=Subrayar
+SearchableBar.highlights.mnemonic=H
+SearchableBar.highlights.tooltip=Subraya todas las apariciones de la frase
+SearchableBar.matchCase=May\u00fasculas y min\u00fasculas
+SearchableBar.matchCase.mnemonic=M
+SearchableBar.repeats=Repite
+SearchableBar.repeats.mnemonic=R
+SearchableBar.reachedBottom=Se ha llegado al final de la p\u00e1gina
+SearchableBar.reachedTop=Se ha llegado al principio de la p\u00e1gina
+SearchableBar.reachedBottomRepeat=Se ha llegado al final de la p\u00e1gina, contin\u00faa desde el principio
+SearchableBar.reachedTopRepeat=Se ha llegado al principio de la p\u00e1gina, contin\u00faa desde el final
+SearchableBar.notFound=No se ha encontrado la frase
