--- a/src/com/jidesoft/swing/swing_it.properties
+++ b/src/com/jidesoft/swing/swing_it.properties
@@ -1,2 +1,30 @@
+#
+# Strings for Searchable classes
+#
+Searchable.searchFor=Cerca:
+Searchable.noMatch=(nessuna corrispondenza)
+
+#
+# Strings for SearchableBar classes
+#
 SearchableBar.find=Trova:
 SearchableBar.find.mnemonic=T
+SearchableBar.findNext=Trova successivo
+SearchableBar.findNext.mnemonic=S
+SearchableBar.findNext.tooltip=Trova occorrenza successiva nella frase
+SearchableBar.findPrevious=Trova precedente
+SearchableBar.findPrevious.mnemonic=P
+SearchableBar.findPrevious.tooltip=Trova occorrenza precedente nella frase
+SearchableBar.highlights=Evidenzia
+SearchableBar.highlights.mnemonic=E
+SearchableBar.highlights.tooltip=Evidenzia tutte le occorrenze della frase
+SearchableBar.matchCase=Maiuscole/minuscole
+SearchableBar.matchCase.mnemonic=M
+SearchableBar.repeats=Ripetizioni
+SearchableBar.repeats.mnemonic=R
+
+SearchableBar.reachedBottom=Raggiunta fine della pagina
+SearchableBar.reachedTop=Raggiunto inizio della pagina
+SearchableBar.reachedBottomRepeat=Raggiunta fine della pagina, continua dall'inizio
+SearchableBar.reachedTopRepeat=Raggiunto inizio della pagina, continua dalla fine
+SearchableBar.notFound=Frase non trovata
