--- a/src/com/jidesoft/swing/swing_sv.properties
+++ b/src/com/jidesoft/swing/swing_sv.properties
@@ -1,30 +1,30 @@
 #
 # Strings for Searchable classes
 #
-Searchable.searchFor=Leta efter:
+Searchable.searchFor=S\u00f6k efter:
 Searchable.noMatch=(ingen matchning)
 
 #
 # Strings for SearchableBar classes
 #
-SearchableBar.find=S\u00F6k:
+SearchableBar.find=S\u00f6k:
 SearchableBar.find.mnemonic=S
-SearchableBar.findNext=S\u00F6k n\u00E4sta
+SearchableBar.findNext=S\u00f6k n\u00e4sta
 SearchableBar.findNext.mnemonic=N
-SearchableBar.findNext.tooltip=S\u00F6k n\u00E4sta f\u00F6rekomst av frasen
-SearchableBar.findPrevious=S\u00F6k f\u00F6reg\u00E5ende
+SearchableBar.findNext.tooltip=S\u00f6k n\u00e4sta f\u00f6rekomst av frasen
+SearchableBar.findPrevious=S\u00f6k f\u00f6reg\u00e5ende
 SearchableBar.findPrevious.mnemonic=F
-SearchableBar.findPrevious.tooltip=S\u00F6k f\u00F6reg\u00E5ende f\u00F6rekomst av frasen
+SearchableBar.findPrevious.tooltip=S\u00f6k f\u00f6reg\u00e5ende f\u00f6rekomst av frasen
 SearchableBar.highlights=Markera
 SearchableBar.highlights.mnemonic=M
-SearchableBar.highlights.tooltip=Markera alla f\u00F6rekomster av frasen
-SearchableBar.matchCase=Matcha gem./VERS.
+SearchableBar.highlights.tooltip=Markera alla f\u00f6rekomster av frasen
+SearchableBar.matchCase=Matcha gemener/versaler
 SearchableBar.matchCase.mnemonic=M
 SearchableBar.repeats=Upprepningar
-SearchableBar.repeats.mnemonic=R
+SearchableBar.repeats.mnemonic=U
 
-SearchableBar.reachedBottom=Nedersta delen av sidan n\u00E5dd
-SearchableBar.reachedTop=\u00D6versta delen av sidan n\u00E5dd
-SearchableBar.reachedBottomRepeat=Nedersta delen av sidan n\u00E5dd, forst\u00E4tt fr\u00E5n toppen
-SearchableBar.reachedTopRepeat=\u00D6versta delen av sidan n\u00E5dd, forst\u00E4tt fr\u00E5n botten
-SearchableBar.notFound=Fras hittades inte
+SearchableBar.reachedBottom=Kom till slutet av sidan
+SearchableBar.reachedTop=Kom till b\u00f6rjan av sidan
+SearchableBar.reachedBottomRepeat=Kom till slutet av sidan, fortsatte fr\u00e5n b\u00f6rjan
+SearchableBar.reachedTopRepeat=Kom till b\u00f6rjan av sidan, fortsatte fr\u00e5n slutet
+SearchableBar.notFound=Frasen hittades inte
