--- a/src/com/jidesoft/swing/swing_zh_CN.properties
+++ b/src/com/jidesoft/swing/swing_zh_CN.properties
@@ -1,30 +1,30 @@
 #
 # Strings for Searchable classes
 #
-Searchable.searchFor=\u641c\u7d22\uff1a 
-Searchable.noMatch=(\u672a\u627e\u5230)
+Searchable.searchFor=\u641c\u7d22:
+Searchable.noMatch=(\u65e0\u5339\u914d)
 
 #
 # Strings for SearchableBar classes
 #
-SearchableBar.find=\u67e5\u627e(F)\uff1a
+SearchableBar.find=\u5bfb\u627e(F):
 SearchableBar.find.mnemonic=F
-SearchableBar.findNext=\u4e0b\u4e00\u4e2a(N)
+SearchableBar.findNext=\u5bfb\u627e\u4e0b\u4e00\u4e2a(F)
 SearchableBar.findNext.mnemonic=N
-SearchableBar.findNext.tooltip=\u67e5\u627e\u4e0b\u4e00\u4e2a\u5339\u914d\u7684\u5b57\u7b26\u4e32
-SearchableBar.findPrevious=\u4e0a\u4e00\u4e2a(P)
+SearchableBar.findNext.tooltip=\u5bfb\u627e\u4e0b\u4e00\u4e2a\u77ed\u8bed
+SearchableBar.findPrevious=\u5bfb\u627e\u4e0a\u4e00\u4e2a(P)
 SearchableBar.findPrevious.mnemonic=P
-SearchableBar.findPrevious.tooltip=\u67e5\u627e\u4e0a\u4e00\u4e2a\u5339\u914d\u7684\u5b57\u7b26\u4e32
-SearchableBar.highlights=\u7a81\u51fa\u663e\u793a(H)
+SearchableBar.findPrevious.tooltip=\u5bfb\u627e\u4e0a\u4e00\u4e2a\u77ed\u8bed
+SearchableBar.highlights=\u9ad8\u4eae\u5ea6\u663e\u793a(H)
 SearchableBar.highlights.mnemonic=H
-SearchableBar.highlights.tooltip=\u7a81\u51fa\u663e\u793a\u6240\u6709\u5339\u914d\u7684\u5b57\u7b26\u4e32
-SearchableBar.matchCase=\u533a\u5206\u5927\u5c0f\u5199(M)
+SearchableBar.highlights.tooltip=\u9ad8\u4eae\u5ea6\u663e\u793a\u6240\u6709\u77ed\u8bed
+SearchableBar.matchCase=\u5339\u914d\u5927\u5c0f\u5199(M)
 SearchableBar.matchCase.mnemonic=M
-SearchableBar.repeats=\u56de\u8f6c(R)
+SearchableBar.repeats=\u91cd\u590d(R)
 SearchableBar.repeats.mnemonic=R
 
-SearchableBar.reachedBottom=\u5230\u8fbe\u4e86\u5e95\u90e8
-SearchableBar.reachedTop=\u5230\u8fbe\u4e86\u9876\u90e8
-SearchableBar.reachedBottomRepeat=\u5230\u8fbe\u4e86\u5e95\u90e8\uff0c\u63a5\u7740\u4ece\u9876\u90e8\u627e\u8d77
-SearchableBar.reachedTopRepeat=\u5230\u8fbe\u4e86\u9876\u90e8\uff0c\u63a5\u7740\u4ece\u5e95\u90e8\u627e\u8d77
-SearchableBar.notFound=\u6ca1\u6709\u627e\u5230\u4efb\u4f55\u5339\u914d
+SearchableBar.reachedBottom=\u5df2\u5230\u8fbe\u9875\u9762\u5e95\u90e8
+SearchableBar.reachedTop=\u5df2\u5230\u8fbe\u9875\u9762\u9876\u90e8
+SearchableBar.reachedBottomRepeat=\u5df2\u5230\u8fbe\u9875\u9762\u5e95\u90e8\uff0c\u4ece\u9876\u90e8\u5f00\u59cb
+SearchableBar.reachedTopRepeat=\u5df2\u5230\u8fbe\u9875\u9762\u9876\u90e8\uff0c\u4ece\u5e95\u90e8\u5f00\u59cb
+SearchableBar.notFound=\u672a\u627e\u5230\u77ed\u8bed
