--- a/src/com/jidesoft/swing/swing_zh_TW.properties
+++ b/src/com/jidesoft/swing/swing_zh_TW.properties
@@ -1,30 +1,30 @@
 #
 # Strings for Searchable classes
 #
-Searchable.searchFor=\u641c\u5c0b 
-Searchable.noMatch=(\u672a\u627e\u5230)
+Searchable.searchFor=\u641c\u5c0b:
+Searchable.noMatch=(\u672a\u627e\u5230\u76f8\u7b26\u5408\u9805\u76ee)
 
 #
 # Strings for SearchableBar classes
 #
-SearchableBar.find=\u67e5\u627e(F)\uff1a
+SearchableBar.find=\u5c0b\u627e(F):
 SearchableBar.find.mnemonic=F
-SearchableBar.findNext=\u4e0b\u4e00\u500b(N)
+SearchableBar.findNext=\u5c0b\u627e\u4e0b\u4e00\u500b(F)
 SearchableBar.findNext.mnemonic=N
-SearchableBar.findNext.tooltip=\u67e5\u627e\u4e0b\u4e00\u500b\u5339\u914d\u7684\u5b57\u7b26\u4e32
-SearchableBar.findPrevious=\u4e0a\u4e00\u500b(P)
+SearchableBar.findNext.tooltip=\u5c0b\u627e\u4e0b\u4e00\u500b\u51fa\u73fe\u8a5e\u7d44
+SearchableBar.findPrevious=\u5c0b\u627e\u524d\u4e00\u500b(P)
 SearchableBar.findPrevious.mnemonic=P
-SearchableBar.findPrevious.tooltip=\u67e5\u627e\u4e0a\u4e00\u500b\u5339\u914d\u7684\u5b57\u7b26\u4e32
-SearchableBar.highlights=\u7a81\u51fa\u986f\u793a(H)
+SearchableBar.findPrevious.tooltip=\u5c0b\u627e\u5148\u524d\u51fa\u73fe\u8a5e\u7d44
+SearchableBar.highlights=\u53cd\u767d(H)
 SearchableBar.highlights.mnemonic=H
-SearchableBar.highlights.tooltip=\u7a81\u51fa\u986f\u793a\u6240\u6709\u5339\u914d\u7684\u5b57\u7b26\u4e32
-SearchableBar.matchCase=\u5340\u5206\u5927\u5c0f\u5beb(M)
+SearchableBar.highlights.tooltip=\u53cd\u767d\u6240\u6709\u51fa\u73fe\u8a5e\u7d44
+SearchableBar.matchCase=\u5927\u5c0f\u5beb\u7b26\u5408(M)
 SearchableBar.matchCase.mnemonic=M
-SearchableBar.repeats=\u56de\u8f49(R)
+SearchableBar.repeats=\u91cd\u8986(R)
 SearchableBar.repeats.mnemonic=R
 
-SearchableBar.reachedBottom=\u5230\u9054\u4e86\u5e95\u90e8
-SearchableBar.reachedTop=\u5230\u9054\u4e86\u9802\u90e8
-SearchableBar.reachedBottomRepeat=\u5230\u9054\u4e86\u5e95\u90e8\uff0c\u63a5\u8457\u5f9e\u9802\u90e8\u627e\u8d77
-SearchableBar.reachedTopRepeat=\u5230\u9054\u4e86\u9802\u90e8\uff0c\u63a5\u8457\u5f9e\u5e95\u90e8\u627e\u8d77
-SearchableBar.notFound=\u6c92\u6709\u627e\u5230\u4efb\u4f55\u5339\u914d
+SearchableBar.reachedBottom=\u81f3\u9801\u5e95\u7aef
+SearchableBar.reachedTop=\u81f3\u9801\u9802\u7aef
+SearchableBar.reachedBottomRepeat=\u81f3\u9801\u5e95\u7aef\uff0c\u7e7c\u7e8c\u5f9e\u9802\u7aef
+SearchableBar.reachedTopRepeat=\u81f3\u9801\u9802\u7aef\uff0c\u7e7c\u7e8c\u5f9e\u5e95\u7aef
+SearchableBar.notFound=\u672a\u5c0b\u627e\u5230\u8a5e\u7d44
