--- a/src/com/jidesoft/dialog/buttons_zh_TW.properties
+++ b/src/com/jidesoft/dialog/buttons_zh_TW.properties
@@ -5,27 +5,25 @@
 Button.apply=\u5957\u7528(A)
 Button.apply.mnemonic=A
 
-Button.back=<\u4e0a\u4e00\u9801(B)
+Button.back=< \u4e0a\u4e00\u6b65(B)
 Button.back.mnemonic=B
 
 Button.browse=\u700f\u89bd(B)
 Button.browse.mnemonic=B
 
-Button.cancel=\u53d6\u6d88
-
-Button.clear=\u6e05\u9664
+Button.clear=\u6e05\u9664(C)
 Button.clear.mnemonic=C
 
 Button.close=\u95dc\u9589(C)
 Button.close.mnemonic=C
 
-Button.continue=\u7e7c\u7e8c(C) 
+Button.continue=\u7e7c\u7e8c(C)
 Button.continue.mnemonic=C
 
 Button.edit=\u7de8\u8f2f(E)
 Button.edit.mnemonic=E
 
-Button.exit=\u7d50\u675f(X)
+Button.exit=\u9000\u51fa(X)
 Button.exit.mnemonic=X
 
 Button.find=\u5c0b\u627e(F)
@@ -34,13 +32,13 @@ Button.find.mnemonic=F
 Button.findNext=\u5c0b\u627e\u4e0b\u4e00\u500b(N)
 Button.findNext.mnemonic=N
 
-Button.finish=\u7d50\u675f(F) 
+Button.finish=\u7d50\u675f(F)
 Button.finish.mnemonic=F
 
 Button.forward=\u524d\u9032(F)
 Button.forward.mnemonic=F
 
-Button.goback=\u5f8c\u9000(G)
+Button.goback=\u56de\u4e0a\u4e00\u6b65(G)
 Button.goback.mnemonic=G
 
 Button.help=\u8aaa\u660e(H)
@@ -49,13 +47,8 @@ Button.help.mnemonic=H
 Button.new=\u65b0\u589e(N)
 Button.new.mnemonic=N
 
-Button.next=\u4e0b\u4e00\u9801(N) >
+Button.next=\u4e0b\u4e00\u500b(N) >
 Button.next.mnemonic=N
-
-Button.no=\u5426(N)
-Button.no.mnemonic=N
-
-Button.ok=\u78ba\u5b9a
 
 Button.open=\u958b\u555f(O)
 Button.open.mnemonic=O
@@ -63,7 +56,7 @@ Button.open.mnemonic=O
 Button.print=\u5217\u5370(P)
 Button.print.mnemonic=P
 
-Button.replace=\u53d6\u4ee3(R)
+Button.replace=\u66f4\u63db(R)
 Button.replace.mnemonic=R
 
 Button.retry=\u91cd\u8a66(R)
@@ -75,17 +68,14 @@ Button.run.mnemonic=R
 Button.save=\u5132\u5b58(S)
 Button.save.mnemonic=S
 
-Button.saveAs=\u53e6\u5b58\u6210(A)
+Button.saveAs=\u53e6\u5b58\u65b0\u6a94(A)
 Button.saveAs.mnemonic=A
 
 Button.stop=\u505c\u6b62(S)
 Button.stop.mnemonic=S
 
-Button.yes=\u662f(Y)
-Button.yes.mnemonic=Y
-
-Button.showDetails=\u7d30\u7bc0(D) >>
+Button.showDetails=\u8a73\u7d30\u8cc7\u6599(D) >>
 Button.showDetails.mnemonic=D
 
-Button.hideDetails=<< \u7d30\u7bc0(D)
+Button.hideDetails=<< \u8a73\u7d30\u8cc7\u6599(D)
 Button.hideDetails.mnemonic=D
