--- a/properties/com/jidesoft/swing/swing_ja.properties
+++ b/properties/com/jidesoft/swing/swing_ja.properties
@@ -9,7 +9,7 @@ Searchable.noMatch=(\u30de\u30c3\u30c1\u304c\u3042\u308a\u307e\u305b\u3093\u3067
 #
 SearchableBar.find=\u691c\u7d22(F):
 SearchableBar.find.mnemonic=F
-SearchableBar.findNext=\u6b21\u3092\u691c\u7d22(F)
+SearchableBar.findNext=\u6b21\u3092\u691c\u7d22(N)
 SearchableBar.findNext.mnemonic=N
 SearchableBar.findNext.tooltip=\u30d5\u30ec\u30fc\u30ba\u306e\u6b21\u56de\u767a\u751f\u3092\u691c\u7d22
 SearchableBar.findPrevious=\u524d\u56de\u3092\u691c\u7d22(P)
