--- a/properties/com/jidesoft/swing/swing_ko.properties
+++ b/properties/com/jidesoft/swing/swing_ko.properties
@@ -9,7 +9,7 @@ Searchable.noMatch=(\ub9e4\uce58 \uc5c6\uc74c)
 #
 SearchableBar.find=\ucc3e\uae30(F):
 SearchableBar.find.mnemonic=F
-SearchableBar.findNext=\ub2e4\uc74c \ucc3e\uae30(F)
+SearchableBar.findNext=\ub2e4\uc74c \ucc3e\uae30(N)
 SearchableBar.findNext.mnemonic=N
 SearchableBar.findNext.tooltip=\ub2e4\uc74c \uc5b4\uad6c \ucc3e\uae30
 SearchableBar.findPrevious=\uc774\uc804 \ucc3e\uae30(P)
