--- a/properties/com/jidesoft/swing/swing_zh_TW.properties
+++ b/properties/com/jidesoft/swing/swing_zh_TW.properties
@@ -9,7 +9,7 @@ Searchable.noMatch=(\u672a\u627e\u5230\u76f8\u7b26\u5408\u9805\u76ee)
 #
 SearchableBar.find=\u5c0b\u627e(F):
 SearchableBar.find.mnemonic=F
-SearchableBar.findNext=\u5c0b\u627e\u4e0b\u4e00\u500b(F)
+SearchableBar.findNext=\u5c0b\u627e\u4e0b\u4e00\u500b(N)
 SearchableBar.findNext.mnemonic=N
 SearchableBar.findNext.tooltip=\u5c0b\u627e\u4e0b\u4e00\u500b\u51fa\u73fe\u8a5e\u7d44
 SearchableBar.findPrevious=\u5c0b\u627e\u524d\u4e00\u500b(P)
