--- a/properties/com/jidesoft/swing/swing_zh_CN.properties
+++ b/properties/com/jidesoft/swing/swing_zh_CN.properties
@@ -9,7 +9,7 @@ Searchable.noMatch=(\u65e0\u5339\u914d)
 #
 SearchableBar.find=\u5bfb\u627e(F):
 SearchableBar.find.mnemonic=F
-SearchableBar.findNext=\u5bfb\u627e\u4e0b\u4e00\u4e2a(F)
+SearchableBar.findNext=\u5bfb\u627e\u4e0b\u4e00\u4e2a(N)
 SearchableBar.findNext.mnemonic=N
 SearchableBar.findNext.tooltip=\u5bfb\u627e\u4e0b\u4e00\u4e2a\u77ed\u8bed
 SearchableBar.findPrevious=\u5bfb\u627e\u4e0a\u4e00\u4e2a(P)
