add a few fr in basic_fr.properties
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@557 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/properties/com/jidesoft/plaf/basic/basic_fr.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_fr.properties
@@ -1,31 +1,68 @@
+#
+# Strings for DockableFrame TitlePane
+#
+
+#
+# Button actions
+#
 DockableFrameTitlePane.closeText=Fermer
 DockableFrameTitlePane.closeMnemonic=F
 DockableFrameTitlePane.closeTooltip=Fermer
+
 DockableFrameTitlePane.hideAutohideText=Masquer
 DockableFrameTitlePane.hideAutohideMnemonic=M
 DockableFrameTitlePane.hideAutohideTooltip=Masquer la fen\u00eatre active \u00e0 masquage automatique
+
 DockableFrameTitlePane.floatingText=Flottant
 DockableFrameTitlePane.floatingMnemonic=T
 DockableFrameTitlePane.floatingTooltip=Basculer en mode flottant
+
 DockableFrameTitlePane.autohideText=Masquage automatique
 DockableFrameTitlePane.autohideMnemonic=Q
+## for both autohide button and stop autohide button since it is a toggle button
 DockableFrameTitlePane.autohideTooltip=Basculer en mode masquage automatique
+
 DockableFrameTitlePane.maximizeText=Agrandir
 DockableFrameTitlePane.maximizeMnemonic=A
-DockableFrameTitlePane.maximizeTooltip=Agrandir/Restaurer
+
 DockableFrameTitlePane.restoreText=Restaurer
 DockableFrameTitlePane.restoreMnemonic=R
+## for both maximize button and restore button since it is a toggle button
+DockableFrameTitlePane.maximizeTooltip=Agrandir/Restaurer
+
+#
+# Dockableframe attributes
+#
 DockableFrameTitlePane.dockableText=Ancr\u00e9
 DockableFrameTitlePane.dockableMnemonic=C
+
 DockableFrameTitlePane.hidableText=Susceptible d'\u00eatre masqu\u00e9
 DockableFrameTitlePane.hidableMnemonic=I
+
 DockableFrameTitlePane.floatableText=Susceptible d'\u00eatre flottant
 DockableFrameTitlePane.floatableMnemonic=L
+
 DockableFrameTitlePane.autohidableText=Susceptible d'\u00eatre masqu\u00e9 automatiquement
 DockableFrameTitlePane.autohidableMnemonic=U
+
+#
+# Strings for Undo
+#
 Undo.dragging=Glissement
 Undo.hide=Masquer
 Undo.toggle=Basculer entre mode flottant/ancr\u00e9
 Undo.toggleAutohide=Basculer entre mode masqu\u00e9 automatiquement/ancr\u00e9
+
+##
+# Strings for CollapsiblePane
+#
 CollapsiblePane.collapseText=D\u00e9tailler/Compacter
 CollapsiblePane.collapseToolTip=D\u00e9tailler ou compacter le contenu
+
+#
+# Strings for JideTabbedPane
+#
+JideTabbedPane.scrollBackward=Aller au document pr\u00e9c\u00e9dent
+JideTabbedPane.scrollForward=Aller au document suivant
+JideTabbedPane.showList=Visualiser la liste des documents
+JideTabbedPane.close=Fermer
