fix basic_nl.properties http://www.jidesoft.com/forum/viewtopic.php?p=28896#28896
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@724 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/properties/com/jidesoft/plaf/basic/basic_nl.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_nl.properties
@@ -55,3 +55,11 @@ Undo.toggleAutohide=Modus Automatisch verbergen/Vergrendelen in-/uitschakelen
 #
 CollapsiblePane.collapseText=Uitvouwen/samenvouwen
 CollapsiblePane.collapseToolTip=Inhoud uitvouwen of samenvouwen
+
+#
+# Strings for JideTabbedPane
+#
+JideTabbedPane.scrollBackward=Scroll achterwaarts
+JideTabbedPane.scrollForward=Scroll voorwaarts
+JideTabbedPane.showList=Toon de lijst
+JideTabbedPane.close=Sluiten
